# aster

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  SECURITY.md  docker-compose.common.yml  docker-compose.images.yml  docker-compose.quick-start.yml  docker-compose.yml  jest.config.ts  jest.preset.js  package.json
.husky/: commit-msg  pre-commit
config/envoy/: envoy.yaml
config/slack/: README.md  manifest.self-hosted.yaml
config/teams/: README.md  manifest.json
services/api/: .env.example  Dockerfile  README.md  package.json  project.json  tsconfig.json
services/api/src/: app.ts  constants.ts  index.d.ts  quick-start.ts  server.ts  unseed.ts
services/dashboard/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  index.html  package.json  project.json  tsconfig.json  vite.config.ts
services/dashboard/src/: App.tsx  constants.ts  main.tsx  theme.ts
services/data-processor/: .env.example  Dockerfile  project.json  pyproject.toml
services/data-processor/src/: build.py  main.py  utils.py
services/doc-indexer/: .env.example  .gitignore  Dockerfile  project.json  pyproject.toml
services/doc-indexer/src/: build.py  main.py  utils.py
services/log-parser/: .gitignore  Dockerfile  project.json  pyproject.toml
services/slackbot/: .env.example  Dockerfile  package.json  project.json
services/slackbot/src/: actions.ts  app.ts  constants.ts  lib.ts  messages.ts
services/teamsbot/: .env.example  Dockerfile  package.json  project.json  tsconfig.json
services/teamsbot/src/: adapter.ts  api.ts  app.ts  bot.ts  client.ts  (+2 more)
(+313 files in other folders)
